--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <main class="main">
         <section class="hero">
             <div class="container">
-                <h2 class="hero__subtitle">Restaurant app</h2>
-                <h1 class="hero__title">Why stay hungry when <br> you can order from Eats</h1>
+                <h1 class="hero__subtitle">Restaurant app</h1>
+                <h2 class="hero__title">Why stay hungry when <br> you can order from Eats</h2>
                 <p class="hero__desc">Order in exchange for hunger</p>
                 <div class="hero__order">
                     <button class="btn__delivery">Delivery</button>
@@ -47,16 +47,16 @@
                     <img class="how__img" src="./img/first-phone.jpg" alt="Create an account">
                     <div class="how__text">
                         <p class="how__step-title">Create an account</p>
-                        <h2 class="how__title">Create/login to an existing account to get started</h2>
-                        <h3 class="how__desc">An account is created with your email and a desired password</h3>
+                        <h3 class="how__step-heading">Create/login to an existing account to get started</h3>
+                        <p class="how__desc">An account is created with your email and a desired password</p>
                     </div>
                 </li>
                 <li class="how__step">
                     <img class="how__img" src="./img/second-phone.jpg" alt="Main page">
                     <div class="how__text">
                         <p class="how__step-title">Explore varieties</p>
-                        <h2 class="how__title">Shop for your favorites meal as e dey hot.</h2>
-                        <h3 class="how__desc">Shop for your favorite meals or drinks and enjoy while doing it.</h3>
+                        <h3 class="how__step-heading">Shop for your favorites meal as e dey hot.</h3>
+                        <p class="how__desc">Shop for your favorite meals or drinks and enjoy while doing it.</p>
                     </div>
                 </li>
             </ul>
@@ -68,8 +68,8 @@
             <h2 class="order__title">Order now.</h2>
             <p class="order__desc">Available on your favorite store. Start your premium experience now</p>
             <div class="order__stores">
-                <button class="btn btn--playstore">Playstore</button>
-                <button class="btn btn--appstore">App store</button>
+                <button class="btn--playstore">Playstore</button>
+                <button class="btn--appstore">App store</button>
             </div>
             </div>
         </section>
@@ -77,6 +77,7 @@
     
     <footer class="footer">
         <div class="container">
+            <img src="./img/logotype.svg" alt="Eats Restaurant Logo" class="footer__logo">
             <p class="footer__copyright">Copyright 2020 Bella Onojie.com</p>
         </div>
     </footer>
